--- a/frontend/src/pages/login.html
+++ b/frontend/src/pages/login.html
@@ -26,4 +26,22 @@
       </a>
     </div>
   </form>
+
+  <form id="twofaForm" class="hidden flex flex-col splace-y-4">
+    <p id="twofaMsg" class="text-sm text-pink-200"></p>
+    <input id="twofaCode" name="code" inputmode="numeric" pattern="\\d{6}" maxlength="6"
+            placeholder="code a 6 chiffres"
+            class="bg-[#1a1a2eb3] border border-[#f462b6]/40 p-6 rounded-md text-pink-100 placeholder-pink-300 focus:outline-none focus:ring-2 focus:ring-pink-400" />
+    <div class="flex gap-4">
+      <button type="submit" data-i18n="login.verif" class="py-3 px-6 rounded-full font-bold bg-gradient-to-r from-[#ff1493] to-[#8b008b] text-whit hover:opacity-90 transition">
+        Verifier
+      </button>
+      <button id="twofaResendBtn" data-i18n="login.reload" type="button" class="py-3 px6 rounded-full font-bold bg-purple-600 hover:bg-purple-700 text-white transition">
+        Renvoyer le code
+      </button>
+      <button id="twofaBackBtn" data-i18n="login.return" type="button" class="py-3 px-6 rounded-full font-bold bg-slate-600 hover:bg-slate-700 text-white transition">
+        Retour
+      </button>
+    </div>
+  </form>
 </section>
