--- a/frontend/src/pages/play.html
+++ b/frontend/src/pages/play.html
@@ -20,7 +20,7 @@
             </p>
         </a>
         <!--vs ia-->
-        <a  href="/play/ia"
+        <a  href="/pong"
             class="group bg-[#1a1a2e]/70 p-6 rounded-xl shadow-neon flex flex-col items-center transition-transform hover:scale-105 duration-300 focus:outline-none focus:ring-2 focus:ring-pink-500"
             aria-label="Jouer vs ia">
             
